# CLV

./: .pre-commit-config.yaml  Makefile  README.md  benchmarking.sh  install_poetry.sh  pyproject.toml
.github/workflows/: build-and-test.yml
src/CLV/: experiments_pytorch.ipynb  experiments_tf.ipynb  model_weights.hdf5  paper_clv.ipynb  paper_valendin_clv.ipynb  paper_valendin_pytorch.ipynb
src/CLV/benchmarking/: benchmark.py  benchmark_2023-03-04-15-17_weights.hdf5  benchmark_2023-03-04-16-21_weights.hdf5  benchmark_2023-03-04-17-32_weights.hdf5  benchmark_2023-03-04-17-35_weights.hdf5  benchmark_2023-03-04-17-38_weights.hdf5  build_plot.py  comparison_gpu_cpu.csv  feature_config.json  model_config.json  results.csv  results2.csv  results3.csv  results4.csv  results_gpu.csv  results_inference_cpu.csv  results_m1.csv  single_benchmark.py  tf_utils.py  train_pytorch_model.py
src/CLV/benchmarking/pytorch1.13.x/: pyproject.toml
src/CLV/benchmarking/pytorch2.0/: pyproject.toml
src/CLV/benchmarking/saved_datasets/: bank_x_valid.pt  bank_y_train.pt  bank_y_valid.pt  cdnow_x_valid.pt  cdnow_y_valid.pt  grocery_x_train.pt  grocery_x_valid.pt  grocery_y_train.pt  grocery_y_valid.pt  moia_x_train copy.pt  moia_x_valid.pt  moia_y_train.pt  moia_y_valid.pt  retail_x_valid.pt  retail_y_train.pt  retail_y_valid.pt
src/CLV/benchmarking/tensorflow2.11/: pyproject.toml
src/CLV/benchmarking/weights/: bank_weights.hdf5  grocery_weights.hdf5  moia_weights.hdf5  retail_weights.hdf5
src/CLV/helpers/: evaluation.py  post_processing.py  pre_processing.py
src/CLV/pytorch_model/: abstract_lstm.py  base_model.py  custom_pytorch_dataset.py  lightning_model.py
src/CLV/pytorch_model/saved_models/: model31-12-2022 15:26:02.pt  model31-12-2022 15:28:28.pt  model_01-01-2023 18:38:29.pt  model_03-03-2023 09:13:50.pt  model_03-03-2023 09:15:30.pt  model_03-03-2023 09:16:48.pt  model_04-01-2023 12:50:13.pt  model_04-01-2023 13:05:25.pt  model_04-03-2023 15:58:00.pt  model_04-03-2023 16:00:44.pt  model_04-03-2023 16:01:26.pt  model_04-03-2023 16:09:50.pt  model_05-01-2023 10:35:48.pt  model_05-01-2023 13:45:40.pt  model_05-01-2023 13:51:23.pt  model_05-01-2023 16:15:20.pt  model_05-01-2023 16:19:42.pt  model_05-01-2023 16:34:19.pt  model_05-01-2023 20:25:58.pt  model_05-01-2023 21:24:51.pt  model_05-01-2023 21:35:23.pt  model_05-01-2023 21:52:23.pt  model_06-01-2023 10:32:36.pt  model_06-01-2023 10:59:52.pt  model_06-01-2023 11:01:52.pt  model_06-01-2023 11:10:00.pt  model_06-01-2023 13:49:10.pt  model_06-01-2023 13:51:01.pt  model_06-01-2023 13:57:16.pt  model_06-01-2023 14:02:03.pt  model_06-01-2023 14:45:34.pt  model_06-01-2023 15:14:36.pt  model_06-01-2023 15:56:29.pt  model_07-01-2023 20:36:00.pt  model_07-01-2023 21:03:01.pt  model_07-01-2023 21:05:04.pt  model_07-01-2023 21:10:29.pt  model_08-01-2023 13:27:48.pt  model_08-01-2023 14:28:21.pt  model_08-01-2023 19:52:54.pt  (+51 more)
src/CLV/tensorflow_model/: prediction_model.py  training_model.py
src/CLV/tensorflow_model/weights/: cd_now_2023-02-08-14-59_weights.hdf5  (+9 more)
tests/helpers/: test_evaluation.py
tests/pytroch_model/: test_base_model.py  test_early_stopping.py
