[tool.poetry]
name = "CLV Predictions"
version = "0.1.0"
description = ""
authors = ["Tom Wüsten"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
jupyter = "^1.0.0"
tensorflow = "^2.10.0"
tensorflow-probability = "^0.18.0"
pandas = "^1.5.0"
matplotlib = "^3.6.1"
keras = "^2.10.0"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
