[tool.poetry]
name = "CLV Predictions"
version = "0.1.0"
description = ""
authors = ["Tom Wüsten"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
jupyter = "^1.0.0"
tensorflow = "^2.10.0"
tensorflow-probability = "^0.18.0"
pandas = "^1.5.0"
matplotlib = "^3.6.1"
keras = "^2.10.0"
tqdm = "^4.64.1"
torch = "^1.12.1"
openpyxl = "^3.0.10"
pyreadr = "^0.4.7"
rpy2 = "^3.5.6"
onnxruntime = "^1.13.1"
tf2onnx = "^1.13.0"
onnx2torch = "^1.5.4"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.0"
captum = "^0.6.0"
install = "^1.3.5"
pytorch-lightning = "^1.8.6"
torchviz = "^0.0.2"
torchview = "^0.2.5"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
