[tool.poetry]
name = "Benchmarking pytorch 1.x"
version = "0.1.0"
description = ""
authors = ["Tom Wüsten"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
numpy = "^1.24.2"
torch = "=1.12.1"
pandas = "^1.5.3"
tqdm = "^4.64.1"
psutil = "^5.9.4"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
