[tool.poetry]
name = "Benchmarking pytorch 2.0"
version = "0.1.0"
description = ""
authors = ["Tom Wüsten"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"
tqdm = "^4.65.0"



[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
