[tool.poetry]
name = "Benchmarking tensorflow 2.11"
version = "0.1.0"
description = ""
authors = ["Tom Wüsten"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"
torch = "1.12"
tqdm = "^4.64.1"
psutil = "^5.9.4"
pyreadr = "^0.4.7"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
